Fixed docs layout responsiveness css: Added overflow auto on pre elements

--- a/src/scss/themes/alidhan/main.scss
+++ b/src/scss/themes/alidhan/main.scss
@@ -104,5 +104,6 @@
 	
 	pre {
 		padding: 10px;
+		overflow: auto;
 	}
 }
