--- a/src/scss/themes/grammarly/main.scss
+++ b/src/scss/themes/grammarly/main.scss
@@ -130,6 +130,7 @@
 
 	pre {
 		padding: 10px;
+		overflow: auto;
 	}
 
 	ul {
