--- a/src/scss/themes/shops/main.scss
+++ b/src/scss/themes/shops/main.scss
@@ -104,6 +104,7 @@
 
 	pre {
 		padding: 10px;
+		overflow: auto;
 	}
 
 	table {
